fixed horizontal scroll bar

--- a/css/index.css
+++ b/css/index.css
@@ -133,8 +133,8 @@ body {
 }
 body {
   font-size: 62.5%;
-  max-width: 100vw;
-  min-width: 500px;
+  max-width: 100%;
+  overflow-x: hidden;
   background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
   height: 100%;
   margin: 0;
@@ -160,10 +160,6 @@ p {
   100% {
     opacity: 1;
   }
-}
-#page-container {
-  position: relative;
-  width: 100%;
 }
 #content-wrap {
   padding-bottom: 2.5rem;
@@ -491,7 +487,7 @@ p {
   position: absolute;
   z-index: 6;
   border-radius: 2rem;
-  left: 60rem;
+  left: 55rem;
   top: 24rem;
 }
 @media (max-width:999px) {
@@ -557,6 +553,9 @@ p {
     height: 30rem;
   }
 }
+.mainheader {
+  overflow: hidden;
+}
 #team {
   display: flex;
   flex-direction: column;
@@ -615,6 +614,7 @@ p {
   z-index: 999999;
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 .navbar h1 {
   font-family: "Righteous", cursive;
