--- a/less/global.less
+++ b/less/global.less
@@ -1,7 +1,7 @@
 body {
   font-size: 62.5%;
-  max-width: 100vw;
-  min-width: 500px;
+  max-width: 100%;
+  overflow-x: hidden;
   background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
   height: 100%;
   margin: 0;
@@ -28,11 +28,6 @@ p {
   100% {
     opacity: 1;
   }
-}
-
-#page-container {
-  position: relative;
-  width: 100%;
 }
 
 #content-wrap {
