--- a/less/main-page.less
+++ b/less/main-page.less
@@ -174,8 +174,9 @@
       position: absolute;
       z-index: 6;
       border-radius: 2rem;
-      left: 60rem;
+      left: 55rem;
       top: 24rem;
+
       @media @mobile {
         display: none;
       }
@@ -231,4 +232,8 @@
       }
     }
   }
+}
+
+.mainheader {
+  overflow: hidden;
 }
