--- a/less/nav.less
+++ b/less/nav.less
@@ -46,6 +46,8 @@
   z-index: 999999;
   display: flex;
   justify-content: space-between;
+  width: 100%;
+
   h1 {
     font-family: "Righteous", cursive;
     font-size: 1.6rem;
